tests/fixtures/pass/closure_curried_capture.sc
let main(): i32 = {
  let base = 40
  let add = { (x: i32)(y: i32) -> base + x + y }
  add(1)(1)
}
